update to latest version 2.10.2

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -34,7 +34,7 @@
   "SYNCHRONOUS_RESIZE": "Redimension synchrone",
   "TOGGLE_FILTER_ROW": "Basculer la ligne des filtres",
   "TOGGLE_PRE_HEADER_ROW": "Basculer la ligne de pré-en-tête",
-  "X_OF_Y_SELECTED": "# de % sélectionné",
+  "X_OF_Y_SELECTED": "# de % sélectionnés",
   "BILLING": {
     "ADDRESS": {
       "STREET": "Adresse de facturation",
